# pictab

./: .gitignore  README.md  pyproject.toml
pictab/: __main__.py  pictab.py
pictab/assets/: index.html  main.js  starred_photos.html  starred_photos.js  style.css
pictab/templates/: index.html
