[tool.poetry]
name = "pictab"
version = "0.1.0"
description = ""
authors = ["Gambhiro <gambhiro@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pictab"}]

[tool.poetry.dependencies]
python = "~3.10"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
